# gpu-montecarlo-risk-rebuild

./: .gitignore  CMakeLists.txt  Makefile  README.md
docs/: index.html
include/: montecarlo.h  timer.h
python/: reference.py
results/: benchmark.md
scripts/: benchmark.py
src/: common.c  cuda.cu  openmp.c  serial.c
